# inkscapefigures

./: LICENSE  README.md  flake.nix  pyproject.toml
inkscapeFigures/: main.py
inkscapefigures/: main.py  picker.py
